week_6 WIP
