# pkg/swagger/api.swagger.json
@@ -49,6 +49,12 @@
             "in": "query",
             "required": false,
             "type": "string"
+          },
+          {
+            "name": "endpointAddress",
+            "in": "query",
+            "required": false,
+            "type": "string"
           }
         ],
         "tags": [
